k8s/frontend/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: amr-portal-nginx
  name: amr-portal-dev
  namespace: amr-portal-ns-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      ensembl.platform.app.name: amr-portal-dev
  template:
    metadata:
      labels:
        ensembl.platform.app.name: amr-portal-dev
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - image: DOCKER_IMAGE
        imagePullPolicy: Always
        name: amr-portal-dev
        ports:
        - containerPort: 8000
          protocol: TCP
