k8s/frontend/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amr-frontend-svc-dev
  namespace: amr-portal-dev
  labels:
    ensembl.platform.app.name: amr-portal
spec:
  selector:
    ensembl.platform.app.name: amr-portal
  type: NodePort
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
      nodePort: 32028
